Fix Resizable + Overlap on Tabs

--- a/static/style.css
+++ b/static/style.css
@@ -6,11 +6,13 @@
 /* Layout */
 
 body {
-    transform: scale(1);
     font-family: windows-regular;
     background-color: #008080;
     color: white;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    overflow:hidden;
+    position:relative;
     margin: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -32,6 +34,7 @@ a {
     width: 10%;
     float: left;
     text-align: center;
+    position:absolute;
 }
 
 .icons-column img {
@@ -60,19 +63,9 @@ a {
     background-color:#306db79d
 }
 
-.tab {
-    display:block;
-    background-color: #FFFFFF;
-    overflow-y: scroll;
-    overflow: hidden;
-    border-color: black;
-    border-width: 2px;
-    border-style:solid;
-}
-
 .tab-header {
     width: inherit;
-    z-index:2;
+    z-index: 2;
     height: 30px;
     overflow: hidden;
     background-color: #253D92;
@@ -105,22 +98,77 @@ a {
     margin: 1rem 1rem;
 }
 
+.tab {
+    display:none;
+    position: absolute;
+    overflow-y: scroll;
+    background-color: #FFFFFF;
+    overflow-y: scroll;
+    border-color: black;
+    border-width: 2px;
+    border-style:solid;
+}
+
+.about {
+    display: block;
+    z-index: 2;
+    position: absolute;
+    width: 700px;
+    height: 600px;
+    overflow-y: scroll;
+    bottom: 15vh;
+    left: 25vw;
+}
 
 .desktop {
-    z-index:1;
-    float:right;
-    width: 600px;
+    display: block;
+    position: absolute;
+    z-index: 1;
+    width: 520px;
     height: 400px;
-    margin-top: 10vh;
-    margin-right: 30vh;
+    top: 10vh;
+    left: 55vw;
+    overflow-y: scroll;
+}
+
+.desktop-icon {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.tab-content {
+    margin: 20px 10px 20px;
+}
+
+.desktop-icon {
+    margin-bottom: 20px;
+    margin-right: 30px;
+}
+
+.desktop-icon img {
+    width: 60px;
+    padding-left: 20px;
+}
+
+.desktop-icon h1 {
+    width: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 20px;
+    padding: 0;
 }
 
 
 /* Footer Styling */
 
 footer {
+    position:fixed;
+    width: 100vw;
     min-height: 30px;
     background: #C5C5C5;
+    bottom:0;
 }
 
 .windows-button {
